added License and readme

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+PUPPETSERVER_HOSTNAME=puppetmaster
 DNS_ALT_NAMES=puppetmain
 ADDITIONAL_COMPOSE_SERVICES_PATH=./data
 COMPOSE_PROJECT_NAME=puppet_server
