--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PUPPETSERVER_HOSTNAME=puppetmaster
-DNS_ALT_NAMES=puppetmain
+PUPPETSERVER_HOSTNAME=puppet
+DNS_ALT_NAMES=puppet
 ADDITIONAL_COMPOSE_SERVICES_PATH=./data
 COMPOSE_PROJECT_NAME=puppet_server
