small readme change

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PUPPETSERVER_HOSTNAME=puppet
-DNS_ALT_NAMES=puppet
+DNS_ALT_NAMES=puppetmaster
 ADDITIONAL_COMPOSE_SERVICES_PATH=./data
 COMPOSE_PROJECT_NAME=puppet_server
+RESTART_BEHAVIOR=unless-stopped
